# MPI_Poisson_2D

./: CMakeLists.txt  README.md  TODO.md
results/: strong.csv  weak.csv
scripts/: plot_scaling.py  run_strong.sh  run_weak.sh
src/: main.cpp  poisson.cpp  poisson.hpp
